# Jellyswarrm

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  flake.nix  ui-version.env
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  update-ui.yml
crates/jellyfin-api/: Cargo.toml  LICENSE-APACHE
crates/jellyfin-api/src/: client.rs  error.rs  lib.rs  models.rs  storage.rs
crates/jellyswarrm-macros/: Cargo.toml  LICENSE-MIT
crates/jellyswarrm-macros/examples/: usage.rs
crates/jellyswarrm-macros/src/: lib.rs
crates/jellyswarrm-macros/tests/: lowercase_routes.rs
crates/jellyswarrm-proxy/: Cargo.toml  build.rs
crates/jellyswarrm-proxy/migrations/: 20251005093214_init.down.sql  20251005093214_init.up.sql  20251122120000_add_server_admins.down.sql  20251122120000_add_server_admins.up.sql  20260113000000_add_performance_indexes.down.sql  20260113000000_add_performance_indexes.up.sql  20260114000000_admin_enhancements.sql  20260114010000_enhanced_features.sql  20260118000000_sqlite_performance_tuning.down.sql  20260118000000_sqlite_performance_tuning.up.sql  20260129220000_add_merged_libraries.down.sql  20260129220000_add_merged_libraries.up.sql  20260221120000_stable_user_identity.down.sql  20260221120000_stable_user_identity.up.sql  20260312120000_add_server_media_streaming_mode.down.sql  20260312120000_add_server_media_streaming_mode.up.sql  20260316000000_add_library_unification.down.sql  20260316000000_add_library_unification.up.sql  20260504120000_add_unified_library_groups.down.sql  20260504120000_add_unified_library_groups.up.sql  20260505120000_add_explicit_sources.down.sql  20260505120000_add_explicit_sources.up.sql  20260521120000_add_merged_libraries.down.sql  20260521120000_add_merged_libraries.up.sql  20260608120000_add_library_groups.down.sql  20260608120000_add_library_groups.up.sql  20260608130000_add_library_duplicate_policy.down.sql  20260608130000_add_library_duplicate_policy.up.sql  20260610120000_library_group_duplicate_policy_default.down.sql  20260610120000_library_group_duplicate_policy_default.up.sql  20260611120000_unique_library_group_members.down.sql  20260611120000_unique_library_group_members.up.sql  20260611130000_user_scoped_automatic_library_members.down.sql  20260611130000_user_scoped_automatic_library_members.up.sql
crates/jellyswarrm-proxy/src/: admin_storage.rs  api_keys.rs  audit_service.rs  config.rs  csrf.rs  db_write_guard.rs  deduplication.rs  duplicate_policy.rs  encryption.rs  error.rs  extractors.rs  federated_users.rs  filters.rs  health_monitor.rs  library_group_service.rs  library_sync_service.rs  main.rs  media_storage_service.rs  merged_library_service.rs  merged_library_storage.rs  payload_processor.rs  proxy_headers.rs  rate_limiter.rs  request_preprocessing.rs  server_storage.rs  session_storage.rs  statistics_service.rs  unified_library_service.rs  url_helper.rs  user_authorization_service.rs  user_permissions.rs  validation.rs  virtual_library_service.rs
crates/jellyswarrm-proxy/src/handlers/: branding.rs  common.rs  federated.rs  items.rs  livestreams.rs  merged_libraries.rs  mod.rs  quick_connect.rs  sessions.rs  syncplay.rs  system.rs  unified.rs  users.rs  videos.rs  views.rs  websocket.rs
crates/jellyswarrm-proxy/src/handlers/federated/: postprocessing.rs
crates/jellyswarrm-proxy/src/handlers/syncplay/: README.md  mod.rs  models.rs  routes.rs  service.rs
crates/jellyswarrm-proxy/src/models/: authorization.rs  jellyfin.rs  mod.rs
crates/jellyswarrm-proxy/src/models/jellyfin/: enums.rs  mod.rs
crates/jellyswarrm-proxy/src/models/tests/: mod.rs  test_jellyfin_models.rs
crates/jellyswarrm-proxy/src/models/tests/files/: episodes.json  item.json  items.json  livetv_playback_request.json  livetv_playback_response.json  person.json  series_nextup.json  special_features.json  userviews.json
crates/jellyswarrm-proxy/src/processors/: field_matcher.rs  json_processor.rs  mod.rs  request_analyzer.rs  request_processor.rs  response_processor.rs  url_processor.rs
crates/jellyswarrm-proxy/src/ui/: mod.rs  release_status.rs  root.rs  server_status.rs  servers.rs  settings.rs  user_dashboard.rs  users.rs
crates/jellyswarrm-proxy/src/ui/account/: mod.rs
crates/jellyswarrm-proxy/src/ui/admin/: admins.rs  api_keys.rs  audit.rs  health.rs  libraries.rs  merged_libraries.rs  mod.rs  permissions.rs  servers.rs  settings.rs  stats.rs  users.rs
crates/jellyswarrm-proxy/src/ui/auth/: mod.rs  routes.rs
crates/jellyswarrm-proxy/src/ui/resources/: custom.css
crates/jellyswarrm-proxy/src/ui/templates/: base.html  index.html  login.html  server_list.html  server_status.html  servers.html  settings.html  settings_form.html  user_dashboard.html  user_item.html  user_list.html  users.html
crates/jellyswarrm-proxy/src/ui/templates/account/: index.html
crates/jellyswarrm-proxy/src/ui/templates/admin/: admin_list.html  admins.html  api_keys.html  api_keys_list.html  audit.html  audit_list.html  health.html  health_cards.html  index.html  libraries.html  library_groups_list.html  library_list.html  library_picker_options.html  library_source_list.html  library_sources.html  merged_libraries.html  merged_library_list.html  permissions.html  server_list.html  server_status.html  servers.html  settings_form.html  stats.html  user_item.html  user_list.html  user_permissions.html  users.html
crates/jellyswarrm-proxy/src/ui/templates/components/: password_input.html  release_status.html
crates/jellyswarrm-proxy/src/ui/templates/user/: index.html  library_items.html  server_libraries.html  user_media.html  user_profile.html  user_server_list.html  user_server_status.html
crates/jellyswarrm-proxy/src/ui/user/: common.rs  media.rs  mod.rs  profile.rs  servers.rs
dev/: Caddyfile  README.md  docker-compose.yml  pyproject.toml
dev/scripts/: download-content.py  download-content.sh  init-jellyfin.py  init-movies-server.py  (+3 more)
docs/: config.md  library-unification-plan.md  request-response-processing.md  ui.md
scripts/: generate-ui-version.sh
(+3 files in other folders)
