[workspace]
members = ["crates/jellyswarrm-proxy", "crates/jellyswarrm-macros", "crates/jellyfin-api",
]
resolver = "2"

[workspace.package]
authors = ["lukaskreussel@gmail.com"]
edition = "2021"
repository = "https://github.com/LLukas22/Jellyswarrm"
version = "0.2.0"

[workspace.dependencies]
# Own Crates
jellyswarrm-macros = { path = "crates/jellyswarrm-macros" }
jellyfin-api = { path = "crates/jellyfin-api" }


# HTTP and Web Framework
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
axum = { version = "0.8.8", features = ["macros"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
moka = { version = "0.12.12", features = ["future"] }
reqwest = { version = "0.12.26", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
rust-embed = "8.9.0"
mime_guess = "2.0.5"
axum-login = "0.18.0"
axum-messages = "0.8.0"
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }

# UI 
askama = { version = "0.14.0" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.1"
serde_urlencoded = "0.7.1"
serde_default = "0.2.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Async Runtime
tokio = { version = "1.48.0", features = ["full"] }

# Logging and Tracing
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# Utilities
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
proc-macro2 = "1.0.103"
quote = "1.0.42"
rand = "0.9.2"
sha2 = "0.10.9"
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
syn = { version = "2.0.111", features = ["full", "extra-traits"] }
regex = "1.12.2"
percent-encoding = "2.3.2"
time = "0.3.44"
base64 = "0.22.1"
futures-util = "0.3.31"
aes-gcm = "0.10.3"
async-trait = "0.1.89"
async-recursion = "1.1.1"

# Config
config = "0.15.19"
toml = "0.9.8"

# Dev Dependencies
wiremock = "0.6.5"
tokio-test = "0.4.4"
tempfile = "3.23.0"
mockall = "0.14.0"


# Build Dependencies
fs_extra = "1.3.0"
