[workspace]
members = ["crates/jellyswarrm-proxy", "crates/jellyswarrm-macros", "crates/jellyfin-api",
]
resolver = "2"

[workspace.package]
authors = ["lukaskreussel@gmail.com"]
edition = "2021"
repository = "https://github.com/LLukas22/Jellyswarrm"
version = "0.2.0"

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
argon2 = "0.5"

# Rate limiting
governor = "0.10.0"

# UI
askama = { version = "0.14.0" }
async-recursion = "1.1.1"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "ws"] }
axum-login = "0.18.0"
axum-messages = "0.8.0"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }

# Config
config = "0.15.19"


# Build Dependencies
fs_extra = "1.3.0"
futures-util = "0.3.31"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
jellyfin-api = { path = "crates/jellyfin-api" }
# Own Crates
jellyswarrm-macros = { path = "crates/jellyswarrm-macros" }
mime_guess = "2.0.5"
mockall = "0.14.0"
moka = { version = "0.12.12", features = ["future"] }
percent-encoding = "2.3.2"
proc-macro2 = "1.0.103"
quote = "1.0.42"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
rust-embed = "8.9.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_default = "0.2.0"
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
serde_with = "3.16.1"
sha2 = "0.10.9"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
syn = { version = "2.0.111", features = ["full", "extra-traits"] }
tempfile = "3.23.0"

# Error Handling
thiserror = "2.0.17"
time = "0.3.44"

# Async Runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-test = "0.4.4"
toml = "0.9.8"


# HTTP and Web Framework
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "set-header"] }

# WebSocket Support
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-channel = "0.3"
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }

# Logging and Tracing
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# Utilities
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["derive"] }

# Dev Dependencies
wiremock = "0.6.5"
