[package]
name = "jellyfin-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
