[package]
name = "jellyswarrm-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
