[package]
name = "jellyswarrm-proxy"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "A high-performance reverse proxy for combining multiple Jellyfin instances"
license = "MIT OR Apache-2.0"

[[bin]]
name = "jellyswarrm-proxy"
path = "src/main.rs"

[dependencies]
jellyswarrm-macros = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
moka = { workspace = true }
askama = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

regex = { workspace = true }
percent-encoding = { workspace = true }

serde_default = { workspace = true }

axum-login = { workspace = true }
axum-messages = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }


time = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }

aes-gcm = { workspace = true }
serde_with = { workspace = true }
jellyfin-api = { workspace = true }
futures-util = { workspace = true }
governor = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }

[build-dependencies]
fs_extra = { workspace = true }
